style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap');

:root {
    --bgcol1: #000314;
    --bgcol2: #181A24;
    --bgcol3: #2A2C3B;
    --bgcol4: #3A3D4D;
    --txtcol1: #CFD2E6;
    --txtcol2: #FFF;
    --txtcol3: #FFA719;
    --txtcol4: #197780;
    --txtcol5: #181A24;
    --emcol1: #197780;
    --emcol2: #23A4B0;  
}

/* width */
::-webkit-scrollbar {
    width: 16px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: var(--bgcol2);
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: var(--bgcol3);
    border-radius: 16px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: var(--bgcol4);
  }

/* General */
body {
    font-family: 'Roboto Mono', monospace;
    font-size: 1em;
    padding: 0;
    margin: 0;
    font-weight: 300;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: var(--bgcol1);
    color: var(--txtcol1);
    justify-content: space-between;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: var(--txtcol3);
}

li {
    list-style: square;
}

h1 {
    color: var(--txtcol2);
    font-size: 3em;
    font-weight: 700;
}

/* Header */
.header {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-grow: 1;
}
/* Content */
.content {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

.game {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 4em;
}

.player, .computer {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
}

h2 {
    font-size: 2em;
    font-weight: 500;
}


.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.btn {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    height: 2em;
    width: 2em;
    margin: 1em;
    border-radius: 0.5em;
    background-color: var(--bgcol3);
    padding: 1em 2em 3em 2em;
    font-size: 1em;
    transition: all .1s ease;
}

.btn:hover, .restart:hover {
    box-shadow: 0 0.2em 0.5em 0 rgba(0, 0, 0, 1), 0 0.4em 1em 0 rgba(0, 0, 0, 0.9);
    background-color: var(--bgcol4);
    cursor: pointer;
    transform: scale(1.1);
    color: var(--txtcol2);
}

.btn:active, .restart:active {
    cursor: pointer;
    background-color: var(--bgcol2);
    transform: translateY(0.2em);
    color: var(--txtcol1);
}

.playerChoice, .computerChoice {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    height: 6em;
    width: 6em;
    margin: 0em;
    background-color: var(--bgcol1);
    padding: 0;
    font-size: 1em;
    transition: all .1s ease;
}

.score {
    display: flex;
    height: 3em;
    justify-content: flex-end;
}

.playerScore, .computerScore, .roundBox {
    background-color: var(--txtcol1);
    font-weight: 500;
    display: flex;
    margin: 0.5em 0;
    padding: 0.5em;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    width: 9em;
    min-width: 9em;
    border-radius: 0.3em;
    color: var(--bgcol4);
}

.roundLabel, input[type=text] {
    margin: 0;
    padding: 0;
    color: inherit;
    border: none;
    font: inherit;
    background: inherit;
}

input[type=text] {
    padding: 0 0 0 1em;
    width: 1em;
}

.information {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 2em;
}

.notifications {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-color: var(--bgcol2);
    width: 20em;
    height: 4em;
    margin-bottom: 2em;
    color: var(--emcol2);
    border-radius: 0.3em;
}

.restart {
    background-color: var(--emcol1);
    font-weight: 500;
    display: flex;
    margin: 1em 0 4em 0;
    padding: 0.5em;
    justify-content: center;
    align-content: center;
    width: 6em;
    min-width: 6em;
    border-radius: 0.3em;
    color: var(--txtcol2);
    transition: all .1s ease;
}

.restart:hover {
    background-color: var(--emcol2);
}

.restart:active {
    background-color: var(--emcol1);
}

/* Footer */
.footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--bgcol2);
}
h3 {
    padding: 0;
    margin: 0;
    font-size: 1em;
    font-weight: 500;
}

ul {
    padding: 0 1.5em 0 1.5em;
    margin: 0 0 1em 0;
    font-size: 0.8em;
}

